--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,9 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
+p,span,h1,h2,h3,h4,h5,h6{
+  color:#000000;
+}
 a {
   font-weight: 500;
   color: #646cff;
