--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,3 +3,17 @@
 body {
     font-family: 'Noto Serif TC', serif;
   }
+  .iframe_container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+ }
+ 
+ .iframe_container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100%;
+ } 
