--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -16,4 +16,18 @@ body {
     left: 0;
     width: 100% !important;
     height: 100%;
- } 
+ }
+ .video-wrapper {
+   width:100%;
+   position: relative;
+   padding-bottom: 56.25%; /* 16:9 寬高比的計算：(9 / 16) * 100% = 56.25% */
+   overflow: hidden;
+}
+
+.video-wrapper iframe {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+}
