--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-p,span,h1,h2,h3,h4,h5,h6{
+/* p,span,h1,h2,h3,h4,h5,h6,button,td,th{
+  color:#000000;
+} */
+*{
   color:#000000;
 }
 a {
@@ -79,4 +82,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+.vfm__content{
+  background-color: #ffffff !important;
 }
