--- a/src/style.css
+++ b/src/style.css
@@ -13,12 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-/* p,span,h1,h2,h3,h4,h5,h6,button,td,th{
-  color:#000000;
-} */
 *{
   color:#000000;
 }
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -84,7 +82,7 @@ button:focus-visible {
   }
 }
 .vfm__content{
-  
+  background-color: #ffffff !important;
 }
 .custom_position{
   margin-top: 80px;
@@ -111,4 +109,7 @@ button:focus-visible {
   .custom_position{
     margin-right: 10px;
   }
+}
+input{
+  background-color: #ffffff;
 }
