--- a/src/style.css
+++ b/src/style.css
@@ -84,6 +84,9 @@ button:focus-visible {
 .vfm__content{
   background-color: #ffffff !important;
 }
+.vfm__content.inset-0{
+  background-color: transparent !important;
+}
 .custom_position{
   margin-top: 80px;
   margin-right: 150px;
