--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -24,10 +24,29 @@ body {
    overflow: hidden;
 }
 
-.video-wrapper iframe {
+.video-wrapper-helf {
+   width: calc( 50% - 4px);
+   position: relative;
+   padding-bottom: 30.12%; /* 16:9 寬高比的計算：(9 / 16) * 100% = 56.25% */
+   overflow: hidden;
+}
+
+@media screen and (max-width: 768px) {
+   .video-wrapper-helf {
+      width:100%;
+      padding-bottom: 56.25%;
+   } 
+}
+
+
+
+.video-wrapper iframe,
+.video-wrapper-helf iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
 }
+
+
